# AgentShield

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  action.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
agentshield/: __init__.py  audit.py  baseline.py  cli.py  models.py  policy.py  redact.py  remediation.py  report.py  rules.py  utils.py
agentshield/checks/: __init__.py  agent_tools.py  environment.py  git_config.py  global_packages.py  project.py  secret_files.py  shell_history.py  ssh.py
docs/: github-action.md
tests/: test_agent_tools.py  test_audit.py  test_baseline.py  test_cli.py  test_git_config.py  test_global_packages.py  test_policy.py  test_project.py  test_redact.py  test_remediation.py  test_report.py  test_rules.py  test_secret_files.py
