[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agentshield"
version = "0.1.0"
description = "A local security auditor for developer laptops used with AI coding agents."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "AgentShield contributors" }]
keywords = ["security", "developer-tools", "ai-agents", "cli", "audit", "secrets"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Security",
  "Topic :: Software Development :: Quality Assurance",
]
dependencies = []

[project.scripts]
agentshield = "agentshield.cli:main"

[tool.setuptools.packages.find]
include = ["agentshield*"]

